IngressController/ingress-controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-rules
spec:
  rules:
    - host: nginx.tkmthecoder.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: nginx-deployment-service
                port:
                  number: 80
